@@ -260,6 +260,9 @@ class FLEXT_SHARE FLEXT_CLASSDEF(flext_obj):
 		//! Convert $0 or #0 symbol into appropriate value
 		static const t_symbol *GetParamSym(const t_symbol *s,t_canvas *c);
 
+		//! Get the canvas arguments
+		void CanvasArgs(AtomList &args) const;
+
 	//!	@} FLEXT_O_INTERNAL
 
 	//!	@} FLEXT_OBJCLASS   	
